# roxygen

./: Cargo.toml  Readme.md
.github/workflows/: tests.yml
src/: lib.rs  util.rs
tests/: compilation_tests.rs  integration.rs  macro_expansions.rs  smoketest.rs
tests/expansion/: argdocpos_only.rs  argdocpos_with_args_section_and_generics.rs  argdocpos_with_argument_section.rs  doxidize_only.expanded.rs  doxidize_only.rs  doxidize_with_argument_section.expanded.rs  doxidize_with_argument_section.rs  roxygen_only.expanded.rs  roxygen_only.rs  roxygen_with_args_section_and_generics.expanded.rs  roxygen_with_args_section_and_generics.rs  roxygen_with_argument_section.expanded.rs  roxygen_with_argument_section.rs  roxygen_with_parameters_section_from_readme.expanded.rs  roxygen_with_parameters_section_from_readme.rs
tests/fail/: duplicate_arguments_section.rs  duplicate_arguments_section.stderr  duplicate_roxygen_attr.rs  duplicate_roxygen_attr.stderr  no_parameters_documented.rs  no_parameters_documented.stderr  wrong_arguments_section_placement.rs  wrong_arguments_section_placement.stderr  wrong_fully_qual_parameters_section_placement.rs  wrong_fully_qual_parameters_section_placement.stderr
