[package]
name = "doxidize"
version = "0.1.0"
edition = "2021"
authors = ["geo-ant"]
license = "MIT"
homepage = "https://github.com/geo-ant/doxidize"
repository = "https://github.com/geo-ant/doxidize"
description = "Seamlessly document function parameters with rustdoc"
readme = "Readme.md"
categories = ["rust-patterns"]
keywords = ["document", "function", "parameters", "arguments", "doxygen"]

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = {version="2.0",features=["parsing","full"]}

[dev-dependencies]
trybuild = "1.0"
macrotest = "1.0"
